Constants file created in util folder. Added filter icons to the columns

--- a/webapp/view/ProductDetail.view.xml
+++ b/webapp/view/ProductDetail.view.xml
@@ -109,7 +109,7 @@
 												class="panelStyle" 
 												expandable="true" 
 												expanded="true" 
-												headerText="Settings" 
+												headerText="{i18n>graphHeader}"
 												width="auto">
                	 								<content>
                     								<HBox class="settingsHBox">
