Deleted commented coding lines

--- a/webapp/view/ProductList.view.xml
+++ b/webapp/view/ProductList.view.xml
@@ -41,43 +41,58 @@
 						<columns>
 							<Column>
 								<layout:HorizontalLayout>
-									<core:Icon id="name" src="sap-icon://filter" press="openProductsFilters"/>
+									<core:Icon id="name" 
+											src="sap-icon://filter" 
+											press="openProductsFilters"/>
 									<Text text="{i18n>productName}"/>
 								</layout:HorizontalLayout>
 							</Column>
 							<Column minScreenWidth="Desktop">
 								<layout:HorizontalLayout>
-									<core:Icon id="quantity" src="sap-icon://filter" press="openProductsFilters"/>
+									<core:Icon id="quantity" 
+											src="sap-icon://filter" 
+											press="openProductsFilters"/>
 									<Text text="{i18n>productQuantity}"/>
 								</layout:HorizontalLayout>
 							</Column>
 							<Column>
 								<layout:HorizontalLayout>
-									<core:Icon id="supplier" src="sap-icon://filter" press="openProductsFilters"/>
+									<core:Icon id="supplier" 
+											src="sap-icon://filter" 
+											press="openProductsFilters"/>
 									<Text text="{i18n>productSupplier}"/>
 								</layout:HorizontalLayout>
 							</Column>
 							<Column minScreenWidth="Tablet">
 								<layout:HorizontalLayout>
-									<core:Icon id="price_kg" src="sap-icon://filter" press="openProductsFilters"/>
+									<core:Icon id="price_kg" 
+											src="sap-icon://filter" 
+											press="openProductsFilters"/>
 									<Text text="{i18n>productPriceKg}"/>
 								</layout:HorizontalLayout>
 							</Column>
 							<Column minScreenWidth="Desktop">
 								<layout:HorizontalLayout>
-									<core:Icon id="caducity" src="sap-icon://filter" press="openProductsFilters"/>
+									<core:Icon id="caducity" 
+											src="sap-icon://filter" 
+											press="openProductsFilters"/>
 									<Text text="{i18n>productCaducity}"/>
 								</layout:HorizontalLayout>
 							</Column>
                             <Column>
 								<layout:HorizontalLayout>
-									<core:Icon id="type" src="sap-icon://filter" press="openProductsFilters"/>
+									<core:Icon id="type" 
+											src="sap-icon://filter" 
+											press="openProductsFilters"/>
 									<Text text="{i18n>productType}"/>
 								</layout:HorizontalLayout>
 							</Column>
 						</columns>
 						<items>
-							<ColumnListItem id="columnItem" vAlign="Middle" type="Navigation" press="navToDetail">
+							<ColumnListItem id="columnItem" 
+											vAlign="Middle" 
+											type="Navigation" 
+											press="navToDetail">
 								<cells>
 									<Text text="{productsTemp>name}"/>
 									<Text text="{productsTemp>quantity}"/>
