Removed fileUploader control, added table properties to show more products if there are more than 10 and divided addProduct function

--- a/webapp/view/ProductList.view.xml
+++ b/webapp/view/ProductList.view.xml
@@ -39,7 +39,9 @@
 						   class="sapUiResponsiveContentPadding"
 						   mode="Delete"
 						   delete="onDeleteProduct"
-						   noDataText="{i18n>noDataText}">
+						   noDataText="{i18n>noDataText}"
+						   growing="true" 
+						   growingThreshold="10">
 						<columns>
 							<Column>
 								<layout:HorizontalLayout>
